Add ResourceNotFoundException in BannersController